# cc-optimize

./: .gitignore  README.md  pyproject.toml
benchmarks/chainstats/: suite.yaml
cc_optimize/: cli.py  config.py
cc_optimize/adapter/: config_applier.py  config_reader.py  early_stopper.py  gepa_adapter.py  task_runner.py
cc_optimize/benchmark/: loader.py  validator.py
cc_optimize/evaluation/: evaluator.py  llm_judge.py  metrics.py  success_checker.py
cc_optimize/models/: benchmark.py  candidate.py  result.py  signals.py
cc_optimize/optimization/: report.py  runner.py  seed.py
cc_optimize/signals/: compute.py  efficiency.py  jsonl_parser.py  repair.py  repetition.py  tool_errors.py
docs/design/: implementation-spec-gepa-claude-code-optimization.md
tests/e2e/: test_full_pipeline.py
tests/fixtures/: error_cascade.jsonl  looping_session.jsonl  sample_session.jsonl
tests/unit/: test_benchmark_loader.py  test_cli.py  test_config.py  test_config_applier.py  test_config_reader.py  test_early_stopper.py  test_evaluator.py  test_gepa_adapter.py  test_jsonl_parser.py  test_metrics.py  test_models.py  test_optimization_runner.py  test_report.py  test_signals_compute.py  test_signals_efficiency.py  test_signals_repair.py  test_signals_repetition.py  test_signals_tool_errors.py  test_success_checker.py  test_task_runner.py
tests/verification/: test_config_io.py  test_config_roundtrip.py  test_conversation_quality.py  test_data_flow.py  test_early_stopping.py  test_evaluator_flow.py  test_jsonl_parser.py  test_metrics.py  test_signal_determinism.py  (+2 more)
(+6 files in other folders)
